--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Wayqullqi-API/generated/prisma/*
 Wayqullqi-API/prisma/*
 Wayqullqi-API/.env
 Wayqullqi-DiscordBot/.env
+Wayqullqi-DiscordBot/src/logs/*
