--- a/Wayqullqi-DiscordBot/package.json
+++ b/Wayqullqi-DiscordBot/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.js",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
+    "chalk": "^4.1.2",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.3"
   },
