--- a/Wayqullqi-API/package.json
+++ b/Wayqullqi-API/package.json
@@ -3,23 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/server.js",
+    "prisma": "prisma"
   },
   "keywords": [],
-  "author": "",
+  "author": "JorDev3712",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.7.0",
     "prisma": "^6.16.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
